@@ -1,3 +1,10 @@
+2014-08-20  Corinna Vinschen  <corinna@vinschen.de>
+
+	* tls_pbuf.h (tmp_pathbuf::tmp_pathbuf): Convert to inline method.
+	(tmp_pathbuf::~tmp_pathbuf): Ditto.
+	* tls_pbuf.cc (tmp_pathbuf::tmp_pathbuf): Remove here.
+	(tmp_pathbuf::~tmp_pathbuf): Ditto.
+
 2014-08-19  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dir.cc (dirfd): Per POSIX, return EINVAL on invalid directory stream.
